# andromeda

./: .gitignore  Cargo.toml  Home.md  LICENSE.md  README.md  _typos.toml  andromeda.json  demo.js  funding.json  main.ts  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  hotpath-comment.yml  hotpath-profile.yml  hotpath.yml  release.yml
cli/: Cargo.toml
cli/src/: bundle.rs  check.rs  compile.rs  config.rs  error.rs  format.rs  helper.rs  lib.rs  lint.rs  main.rs  repl.rs  run.rs  runtime.rs  serve.rs  styles.rs  task.rs  upgrade.rs  wpt.rs
cli/src/lsp/: backend.rs  capabilities.rs  completions.rs  diagnostic_converter.rs  mod.rs  server.rs
cli/src/repl/: highlighter.rs  prompt.rs  validator.rs
core/: Cargo.toml
core/src/: error.rs  event_loop.rs  ext_interface.rs  ext_loader.rs  extension.rs  helper.rs  host_data.rs  interval.rs  lib.rs  resource_table.rs  runtime.rs  task.rs  timeout.rs
core/src/ext/: console.rs  fs.rs  mod.rs  sqlite.rs  time.rs
core/src/module/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: bundle.rs  check.rs  compile.rs  config.rs  error.rs  format.rs  helper.rs  lib.rs  lint.rs  main.rs  repl.rs  run.rs  task.rs  upgrade.rs
crates/cli/src/lsp/: backend.rs  capabilities.rs  completions.rs  diagnostic_converter.rs  mod.rs  options.rs  server.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  error_reporting.rs  event_loop.rs  extension.rs  helper.rs  host_data.rs  lib.rs  llm_suggestions.rs  resource_table.rs  runtime.rs  sync_resource_table.rs  task.rs
crates/core/src/module/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: event_loop.rs  recommended.rs
crates/runtime/src/ext/: command.rs  fs.rs  mod.rs  process.rs  tcp.rs  tls.rs  virtualfs.rs  web_locks.rs
crates/runtime/src/ext/broadcast_channel/: broadcast_channel.ts  mod.rs
examples/: andromeda.json  args.ts  atob.ts  blob.ts  brickbreaker.ts  btoa.ts  cache_storage.ts  canvas.ts  canvas_advanced.ts  canvas_global_alpha.ts  canvas_gradient.ts  command.ts  comprehensive_test.ts  console.ts  cron.ts  crypto.ts  env.ts  error.ts  export.ts  fetch.ts  final_sync_test.ts  fizzbuzz.ts  fs.ts  headers.ts  http.ts  import-map.json  import-map.ts  import.ts  interval.ts  jsr.ts  lint_empty_statement.ts  lint_prefer_const.ts  main.ts  navigator.ts  os.ts  path_apis_test.ts  performance.ts  queue_microtask.ts  request.ts  response.ts  (+10 more)
examples/event/: constructor.ts
examples/fetch/: parallel.ts  post_json.ts  random_fact.ts
examples/games/: 2048.ts  asteroids.ts  brickbreaker.ts  dino.ts  flappy.ts  minesweeper.ts  pong.ts  snake.ts  space_invaders.ts  tictactoe.ts
examples/modules/: config.json  default-export.js  default-export.ts  greeting.ts  math.js  math.ts  mixed-exports.ts  path.ts  runtime_test.ts  sequential-test.js  sequential-test.ts  test_esm.ts  test_fetch.ts  test_fetch_headers.ts  test_import.ts  test_simple_fetch.ts  test_typescript.ts
examples/serve/: api-server.ts  basic.ts  headers.ts  index.ts  json-request.ts  options.ts  parallel.ts  query-params.ts  routing.ts  test-simple.ts  user-agent.ts
examples/todo-app/: index.html  index.ts
examples/workers/: fib.ts  fib.worker.ts  hello.ts  hello.worker.ts  message_channel.ts  sab_atomics.ts  sab_atomics.worker.ts  sab_parallel_sum.ts  sab_parallel_sum.worker.ts  sab_shared_memory.ts  sab_shared_memory.worker.ts
namespace/: console.ts  global.d.ts  internals.d.ts  mod.ts
runtime/: Cargo.toml  console.ts  global.d.ts  internals.d.ts  localstorage.ts  mod.ts
runtime/src/: event_loop.rs  interval.rs  lib.rs  recommended.rs  timeout.rs
runtime/src/ext/: cli.rs  console.rs  fs.rs  mod.rs  process.rs  time.rs  tls.rs  virtualfs.rs  web_locks.rs
runtime/src/ext/broadcast_channel/: broadcast_channel.ts  mod.rs
runtime/src/ext/cache_storage/: cache_storage.ts  mod.rs
runtime/src/ext/canvas/: context2d.rs  fill_style.rs  font_system.rs  image.ts  mod.rs  mod.ts  state.rs  text.rs  text_metrics.rs
runtime/src/ext/canvas/renderer/: mod.rs  render.rs  shader.rs  types.rs
runtime/src/ext/console/: mod.rs  mod.ts
runtime/src/ext/cron/: mod.rs
runtime/src/ext/crypto/: mod.rs  mod.ts  subtle.rs
runtime/src/ext/fetch/: auth.ts  cors.ts  fetch.ts  headers.ts  mod.rs  response.ts  response_filter.ts  types.ts
runtime/src/ext/fetch/body/: body_mixin.ts  consume.ts  extract.ts  inner_body.ts  mod.ts
runtime/src/ext/fetch/fetch/: mod.rs  mod.ts
runtime/src/ext/fetch/headers/: mod.rs  mod.ts
runtime/src/ext/fetch/request/: mod.rs  mod.ts
runtime/src/ext/fetch/response/: mod.rs  mod.ts
runtime/src/ext/ffi/: core.rs  ir.rs  mod.rs  mod.ts
runtime/src/ext/file/: blob.ts  file.ts  form_data.ts  mod.rs
runtime/src/ext/http/: mod.rs  mod.ts
runtime/src/ext/local_storage/: local_storage.ts  mod.rs
runtime/src/ext/net/: dns.rs  error.rs  mod.rs  unix.rs
runtime/src/ext/sqlite/: mod.rs  sqlite.ts
runtime/src/ext/streams/: mod.rs  queuing_strategy.ts  readable_stream.ts  transform_stream.ts  writable_stream.ts
runtime/src/ext/time/: interval.rs  mod.rs  timeout.rs
runtime/src/ext/url/: mod.rs  mod.ts
runtime/src/ext/web/: battery.ts  dom_exception.ts  event.ts  mod.rs  navigator.ts  performance.ts  queue_microtask.ts  structured_clone.ts  text_encoding.ts
runtime/src/ext/webidl/: mod.rs  mod.ts
src/: helper.rs  main.rs  theme.rs
src/runtime/: mod.ts  runtime.d.ts
tests/: .gitignore  Cargo.toml  expectation.json  metrics.json  skip.json  wpt_executor.rs  wpt_harness_builder.rs  wpt_runner.rs
tests/js/: console_optimization.js  result_output.js  structured_clone_sab.test.ts  wpt_harness.js
tests/js/canvas/: _harness.js  composite.test.js  paths.test.js  state.test.js  text_styles.test.js  transforms.test.js
tests/js/workers/: echo.worker.ts  message_channel.test.ts  sab.worker.ts  shared_array_buffer.test.ts  spawn_and_echo.test.ts  terminate.test.ts  terminate.worker.ts  uncaught_error.test.ts  uncaught_error.worker.ts
types/: cron.d.ts  global.d.ts  internals.d.ts  window.d.ts
(+84 files in other folders)
