[workspace]
resolver = "2"
members = ["cli", "core", "runtime", "tests"]

[workspace.package]
authors = ["the Andromeda team"]
edition = "2024"
license = "Mozilla Public License 2.0"
repository = "https://github.com/tryandromeda/andromeda"
version = "0.1.0-draft43"

[workspace.dependencies]
andromeda-core = { path = "core" }
andromeda-runtime = { path = "runtime", features = [
    "canvas",
    "crypto",
    "storage",
    "serve"
] }
anyhow = "1.0.100"
anymap = "0.12.1"
async-trait = "0.1.89"
base64-simd = "0.8.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
console = "0.16.1"
dprint-core = "0.67.4"
dprint-plugin-typescript = "0.95.11"
dprint-plugin-json = "0.20.0"
env_logger = "0.11.8"
futures = "0.3.31"
glob = "0.3.3"
hotpath = { version = "0.2.10" }
indexmap = "2.11.4"
image = "0.25.8"
lazy_static = "1.5.0"
libloading = "0.8.9"
libffi = "4.1.2"
libsui = "0.10.0"
log = "0.4.28"
lsp-types = "0.97.0"
nova_vm = { git = "https://github.com/trynova/nova", rev = "d0fdb7e364cba56d09e09ec1d1d7242caece7bd9", features = [
    "typescript",
    "annex-b",
    "proposals"
] }
nu-ansi-term = "0.50.1"
owo-colors = "4.2.2"
oxc_codegen = "0.90.0"
oxc_ast = "0.90.0"
oxc_minifier = "0.90.0"
oxc_mangler = "0.90.0"
oxc_allocator = "0.90.0"
oxc_diagnostics = "0.90.0"
oxc-miette = { version = "2.5.0", features = ["fancy"] }
oxc_parser = "0.90.0"
oxc_semantic = "0.90.0"
oxc_span = "0.90.0"
oxc_transformer = "0.90.0"
rand = "0.9.2"
reedline = "0.42.0"
regex = "1.11.3"
rustls = "0.23.32"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
ring = "0.17.14"
rusqlite = { version = "0.37.0", features = [
    "bundled",
    "functions",
    "load_extension"
] }
saffron = "0.1.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34-deprecated"
socket2 = "0.6.0"
toml = "0.9.7"
trust-dns-resolver = "0.23.2"
signal-hook = "0.3.18"
thiserror = "2.0.16"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["rt", "sync", "time", "fs"] }
tokio-rustls = "0.26.4"
tokio-test = "0.4.4"
tower-lsp = "0.20.0"
ureq = { version = "3.1.2", features = ["json"] }
url = { version = "2.5.7", features = ["serde", "expose_internals"] }
uuid = { version = "1.18.1", features = ["v4"] }
webpki-roots = "1.0.2"
wgpu = { version = "26.0.1", features = ["wgsl", "webgpu"] }

[profile.release]
lto = true
