[workspace]
resolver = "2"
members = ["crates/*", "tests"]

[workspace.package]
authors = ["the Andromeda team"]
edition = "2024"
license = "Mozilla Public License 2.0"
repository = "https://github.com/tryandromeda/andromeda"
version = "0.1.5"

[workspace.dependencies]
andromeda-core = { path = "crates/core" }
andromeda-runtime = { path = "crates/runtime", features = [
    "canvas",
    "crypto",
    "storage",
    "serve",
] }
anyhow = "1.0.102"
anymap = "0.12.1"
async-trait = "0.1.89"
base64-simd = "0.8.0"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
console = "0.16.3"
toml = "1.1.0"
copilot-client = "0.1.0"
cosmic-text = "0.18.2"
dprint-core = "0.67.4"
dprint-plugin-typescript = "0.95.15"
dprint-plugin-json = "0.21.3"
env_logger = "0.11.9"
futures = "0.3.32"
glob = "0.3.3"
hotpath = { version = "0.14" }
indexmap = "2.13.0"
image = "0.25.10"
lazy_static = "1.5.0"
libloading = "0.9.0"
libffi = "5.1.0"
libsui = "0.13.0"
log = "0.4.29"
lru = "0.16.3"
lsp-types = "0.97.0"
nova_vm = { git = "https://github.com/trynova/nova", rev = "a82b0408533bc93f857aa2ee5daee4f39f62dc6f" }
nu-ansi-term = "0.50.3"
owo-colors = "4.3.0"
oxc_codegen = "0.122.0"
oxc_ast = "0.122.0"
oxc_minifier = "0.122.0"
oxc_mangler = "0.122.0"
oxc_allocator = "0.122.0"
oxc_diagnostics = "0.122.0"
oxc-miette = { version = "2.7.0", features = ["fancy"] }
oxc_parser = "0.122.0"
oxc_semantic = "0.122.0"
oxc_span = "0.122.0"
oxc_transformer = "0.122.0"
rand = "0.10.0"
reedline = "0.46.0"
regex = "1.12.3"
rustls = "0.23.37"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.0"
ring = "0.17.14"
rusqlite = { version = "0.39.0", features = [
    "bundled",
    "functions",
    "load_extension",
] }
saffron = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34-deprecated"
socket2 = "0.6.3"

swash = "0.2.6"
trust-dns-resolver = "0.23.2"
signal-hook = "0.4.3"
thiserror = "2.0.18"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["rt", "sync", "time", "fs"] }
tokio-rustls = "0.26.4"
tokio-test = "0.4.5"
tower-lsp = "0.20.0"
ureq = { version = "3.3.0", features = ["json"] }
url = { version = "2.5.8", features = ["serde", "expose_internals"] }
uuid = { version = "1.22.0", features = ["v4"] }
webpki-roots = "1.0.6"
wgpu = { version = "27.0.1", features = ["wgsl", "webgpu"] }

[profile.dev]
split-debuginfo = "packed"

[profile.release]
lto = true

[profile.hotpath]
inherits = "release"
# Reduce CI build times by disabling LTO
lto = false
