[package]
name = "andromeda"
default-run = "andromeda"
description = "JS/TS Runtime in rust powered by Nova with no transpilation BS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
clap.workspace = true
console.workspace = true
dprint-core.workspace = true
dprint-plugin-typescript.workspace = true
dprint-plugin-json.workspace = true
indexmap.workspace = true
reedline.workspace = true
nu-ansi-term.workspace = true
nova_vm.workspace = true
andromeda-core.workspace = true
andromeda-runtime.workspace = true
oxc_ast.workspace = true
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxc_semantic.workspace = true
oxc-miette.workspace = true
oxc_diagnostics.workspace = true
owo-colors.workspace = true
thiserror.workspace = true
regex.workspace = true
anymap.workspace = true
tokio.workspace = true
libsui.workspace = true
