[package]
name = "andromeda"
default-run = "andromeda"
description = "JS/TS Runtime in rust powered by Nova with no transpilation BS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[features]
default = []
hotpath = ["dep:hotpath", "hotpath/hotpath","andromeda-core/hotpath", "andromeda-runtime/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-bytes-max = ["hotpath/hotpath-alloc-bytes-max"]
hotpath-alloc-count-total= ["hotpath/hotpath-alloc-count-total"]
hotpath-alloc-count-max= ["hotpath/hotpath-alloc-count-max"]
hotpath-off = ["hotpath/hotpath-off"]

[lib]
name = "andromeda"
path = "src/lib.rs"

[[bin]]
name = "andromeda"
path = "src/main.rs"

[[bin]]
name = "wpt"
path = "src/bin/wpt.rs"

[[bin]]
name = "andromeda-installer"
path = "src/bin/installer.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
dprint-core.workspace = true
dprint-plugin-typescript.workspace = true
dprint-plugin-json.workspace = true
indexmap.workspace = true
reedline.workspace = true
nu-ansi-term.workspace = true
nova_vm.workspace = true
andromeda-core.workspace = true
andromeda-runtime.workspace = true
anyhow.workspace = true
rustls.workspace = true
oxc_ast.workspace = true
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxc_semantic.workspace = true
oxc-miette.workspace = true
oxc_diagnostics.workspace = true
oxc_codegen.workspace = true
oxc_mangler.workspace = true
oxc_minifier.workspace = true
oxc_transformer.workspace = true
owo-colors.workspace = true
thiserror.workspace = true
ureq.workspace = true
serde.workspace = true
regex.workspace = true
anymap.workspace = true
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }
libsui.workspace = true
tower-lsp.workspace = true
lsp-types.workspace = true
futures.workspace = true
log.workspace = true
env_logger.workspace = true
glob.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
chrono.workspace = true
hotpath = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
