[package]
name = "andromeda-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
anyhow.workspace = true
nova_vm.workspace = true
anymap.workspace = true
tokio.workspace = true
oxc-miette.workspace = true
oxc_diagnostics.workspace = true