[package]
name = "andromeda-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[features]
default = []
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total= ["hotpath/hotpath-alloc-count-total"]
hotpath-off = ["hotpath/hotpath-off"]
hotpath-ci = ["hotpath/hotpath-ci"]

[dependencies]
anyhow.workspace = true
nova_vm.workspace = true
anymap.workspace = true
tokio.workspace = true
oxc-miette.workspace = true
oxc_diagnostics.workspace = true
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_span.workspace = true
oxc_allocator.workspace = true
owo-colors.workspace = true
thiserror.workspace = true
url.workspace = true
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
hotpath = { workspace = true, optional = true }
