[package]
name = "andromeda-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[features]
default = []
canvas = ["dep:wgpu", "dep:image"]
crypto = ["dep:ring", "dep:rand"]

[dependencies]
andromeda-core.workspace = true
anyhow.workspace = true
nova_vm.workspace = true
anymap.workspace = true
tokio.workspace = true
oxc-miette.workspace = true
oxc_diagnostics.workspace = true
serde.workspace = true
url.workspace = true
base64-simd.workspace = true
image = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
rusqlite.workspace = true
signal-hook.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
wgpu = { workspace = true, optional = true }
